[metadata]
name = contextualise
version = attr: contextualise.version.__version__
author = Brett Alistair Kromkamp
author_email = brettkromkamp@gmail.com
description = Contextualise is an effective tool particularly suited for organising information-heavy projects and activities consisting of unstructured and widely diverse data and information resources
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brettkromkamp/contextualise
project_urls =
    Bug Tracker = https://github.com/brettkromkamp/contextualise/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Framework :: Flask
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Education

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
install_requires =
    bcrypt>=4.0.1
    Flask-Mail>=0.9.1
    Flask-SeaSurf>=1.1.1
    Flask-Security-Too>=5.0.2
    Flask-SQLAlchemy>=3.0.2
    Flask>=2.2.2
    gunicorn>=20.1.0
    maya>=0.6.1
    mistune>=2.0.4
    Pygments>=2.13.0
    python-slugify>=6.1.2
    SQLAlchemy>=1.4.42
    topic-db>=2.0.5
    Werkzeug>=2.2.2
